--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.13.0",
+    "lodash": "^4.15.0",
     "flux": "^2.1.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-router": "^2.4.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "react-router": "^2.7.0",
     "react-sound": "^0.5.0",
-    "webpack": "^1.13.1"
+    "webpack": "^1.13.2"
   }
 }
