--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
-    "lodash": "^4.15.0",
+    "bluebird": "^3.4.6",
     "flux": "^2.1.1",
+    "lodash": "^4.15.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
