--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.4.6",
     "flux": "^2.1.1",
     "lodash": "^4.15.0",
+    "moment": "^2.15.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
