--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^15.3.1",
     "react-router": "^2.7.0",
     "react-sound": "^0.5.0",
+    "string-hash": "^1.1.0",
     "webpack": "^1.13.2"
   }
 }
