--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-2": "^6.13.0",
     "bluebird": "^3.4.6",
     "flux": "^2.1.1",
+    "hover.css": "^2.0.2",
     "lodash": "^4.15.0",
     "moment": "^2.15.2",
     "react": "^15.3.1",
