--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "7.0.0",
+    "npm": "3.10.8"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
