--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/.bin/webpack"
+  },
+  "engines": {
+    "node": "7.0.0",
+    "npm": "3.10.8"
   },
   "keywords": [],
   "author": "",
