--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
     "bluebird": "^3.4.6",
+    "firebase": "^3.6.4",
     "flux": "^2.1.1",
     "hover.css": "^2.0.2",
     "lodash": "^4.15.0",
